--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     "pg-format": "^1.0.4"
   },
   "dependencies": {
+    "husky": "^8.0.3",
     "dotenv": "^16.0.0",
     "express": "^4.19.2",
-    "pg": "^8.7.3",
     "supertest": "^7.0.0"
   },
   "jest": {
